--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                             layers.getSubLayer(0).show();
                             layers.getSubLayer(1).hide();
                             layers.getSubLayer(2).show();
-                        } else if (layer == 'nationa-forests') {
+                        } else if (layer == 'national-forests') {
                             layers.getSubLayer(0).hide();
                             layers.getSubLayer(1).show();
                             layers.getSubLayer(2).show();
