--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div id='selector_menu'>
         <select id='selector'>
             <option value='OSM'>Topographic Base Map</option>
-            <option value='stamen'>Dark Base Map</option>
+            <option value='stamen'>Gray Base Map</option>
         </select>
 
     </div>
@@ -316,10 +316,9 @@
             });
             map.addLayer(tiles);
 
-            var tiles1 = L.tileLayer('http://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png', {
-                attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> &copy; <a href="http://cartodb.com/attributions">CartoDB</a>',
-                subdomains: 'abcd',
-                maxZoom: 19
+            var tiles1 = L.tileLayer('http://server.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Light_Gray_Base/MapServer/tile/{z}/{y}/{x}', {
+	attribution: 'Tiles &copy; Esri &mdash; Esri, DeLorme, NAVTEQ',
+	maxZoom: 16
             });
 
 
