--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div id='selector_menu'>
         <select id='selector'>
             <option value='OSM'>Topographic Base Map</option>
-            <option value='stamen'>Gray Base Map</option>
+            <option value='stamen'>Gray Scale Base Map</option>
         </select>
 
     </div>
