--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
             var sourceObject = {
                 user_name: 'owenjeff',
                 type: 'cartodb',
+                https: 'true',
                 sublayers: [
                     {
                         // Loads CartoDB geojson dataset from sql query, the same goes for the 2 other layers...
