--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 ext: 'png'
             });
             map.addLayer(tiles);
-            var tiles1 = L.tileLayer('http://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png', {
+            var tiles1 = L.tileLayer('https://tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png', {
                 maxZoom: 18,
                 attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
             });
