Added Presentation Video Link

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                     </li>
                     <li>Map authored by <a target='_blank' class='link' href='https://github.com/OwenJeff'>Owen Mickelson</a> on March 13,2017</li>
                     <li>This map is hosted through CartoDB. See the data from this map projected here on the <a target='_blank' class='link' href='https://owenjeff.carto.com/builder/3be87ca6-1033-11e7-92ed-0e8c56e2ffdb/embed'>Northwest United States History of Forest Fires</a> map.</li>
+                    <li>Here is my 7 minute video presentation on this map through <a target='_blank' class='link' href='https://drive.google.com/file/d/0B6cng5cykkgPVFBFTUlDMlIwbmM/view'>My Google Drive</a></li>
                 </ul>
             </footer>
         </div>
